[gd_scene load_steps=14 format=2]

[ext_resource path="res://LobbyMenu.gd" type="Script" id=1]
[ext_resource path="res://plex_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://plex_28bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://plex_20.tres" type="DynamicFont" id=5]

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0, 0, 0.64 )

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.6 )

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxFlat" id=19]
bg_color = Color( 0.270588, 0.270588, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=20]
bg_color = Color( 0, 0, 0, 0.68 )

[sub_resource type="StyleBoxEmpty" id=21]

[node name="LobbyMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1280.0
margin_bottom = 750.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1260.0
margin_bottom = 730.0
alignment = 1

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 159.0
margin_right = 1240.0
margin_bottom = 201.0
custom_fonts/font = ExtResource( 2 )
text = "New Game"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 205.0
margin_right = 1240.0
margin_bottom = 551.0
custom_constants/separation = 75
alignment = 1

[node name="PlayersList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 145.0
margin_right = 445.0
margin_bottom = 346.0

[node name="Player List" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList"]
margin_right = 300.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Players"
align = 1
valign = 1

[node name="PlayerList" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList"]
margin_top = 46.0
margin_right = 300.0
margin_bottom = 346.0
rect_min_size = Vector2( 300, 300 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 23 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList"]
margin_right = 300.0
margin_bottom = 300.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Scroll" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 290.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer/Scroll"]
margin_right = 280.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Player" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer/Scroll/VBoxContainer"]
margin_right = 280.0
margin_bottom = 47.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer/Scroll/VBoxContainer/Player"]
margin_right = 280.0
margin_bottom = 47.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer/Scroll/VBoxContainer/Player/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 275.0
margin_bottom = 42.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = ExtResource( 3 )
text = "Player 1"
align = 1

[node name="Player2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer/Scroll/VBoxContainer"]
margin_top = 51.0
margin_right = 280.0
margin_bottom = 98.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer/Scroll/VBoxContainer/Player2"]
margin_right = 280.0
margin_bottom = 47.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayersList/PlayerList/MarginContainer/Scroll/VBoxContainer/Player2/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 275.0
margin_bottom = 42.0
custom_styles/normal = SubResource( 14 )
custom_fonts/font = ExtResource( 3 )
text = "Player 2"
align = 1

[node name="Buttons" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 520.0
margin_right = 720.0
margin_bottom = 346.0
custom_constants/separation = 25
alignment = 1

[node name="CloseLobby" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 105.0
margin_right = 200.0
margin_bottom = 160.0
rect_min_size = Vector2( 200, 55 )
custom_styles/panel = SubResource( 17 )

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Buttons/CloseLobby"]
margin_right = 200.0
margin_bottom = 55.0
custom_styles/normal = SubResource( 18 )
custom_fonts/font = ExtResource( 3 )
text = "Back"

[node name="StartGame" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Buttons"]
margin_top = 185.0
margin_right = 200.0
margin_bottom = 240.0
rect_min_size = Vector2( 200, 55 )
custom_styles/panel = SubResource( 17 )

[node name="StartButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Buttons/StartGame"]
margin_right = 200.0
margin_bottom = 55.0
custom_styles/normal = SubResource( 18 )
custom_fonts/font = ExtResource( 3 )
text = "Start Game"

[node name="PlanetsList" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 795.0
margin_right = 1095.0
margin_bottom = 346.0

[node name="Planet List" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList"]
visible = false
margin_right = 300.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 2 )
text = "Planets"
align = 1
valign = 1

[node name="StartingPlanetList" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList"]
margin_right = 300.0
margin_bottom = 346.0
rect_min_size = Vector2( 300, 300 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 19 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList"]
margin_right = 300.0
margin_bottom = 346.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Scroll" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 290.0
margin_bottom = 336.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll"]
margin_right = 280.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="Botra" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer"]
margin_right = 280.0
margin_bottom = 47.0
custom_styles/panel = SubResource( 20 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer/Botra"]
margin_right = 280.0
margin_bottom = 47.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Botra" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer/Botra/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 275.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 37 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = ExtResource( 5 )
text = "Botra"

[node name="Anaxes" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer"]
margin_top = 57.0
margin_right = 280.0
margin_bottom = 104.0
custom_styles/panel = SubResource( 20 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer/Anaxes"]
margin_right = 280.0
margin_bottom = 47.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Anaxes" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer/Anaxes/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 275.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 37 )
custom_styles/normal = SubResource( 21 )
custom_fonts/font = ExtResource( 5 )
text = "Anaxes"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Buttons/CloseLobby/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/Buttons/StartGame/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer/Botra/MarginContainer/Botra" to="." method="_on_Botra_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PlanetsList/StartingPlanetList/MarginContainer/Scroll/VBoxContainer/Anaxes/MarginContainer/Anaxes" to="." method="_on_Anaxes_pressed"]
